<resources>
    <string name="app_name">Contacts Book</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="there_was_an_error_loading_data">There was an error loading data</string>
    <string name="Contact_Details_Title">Contact Details</string>
    <string name="Contacts_List_Title">Contacts List</string>
    <string name="edit_menu">Edit</string>
    <string name="delete_menu">Delete</string>
    <string name="email_addresses">Email addresses</string>
    <string name="phone_numbers">Phone Numbers</string>
    <string name="edit_contact_title">Edit contact</string>
    <string name="add_contact_title">Add contact</string>
    <string name="type_an_email_address">Type an email address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="type_a_first_name">Type a first name</string>
    <string name="type_a_last_name">Type a last name</string>
    <string name="emails">Emails</string>
    <string name="add_email_address">Add email address</string>
    <string name="add_phone_number">Add phone number</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="phone_mask">123-456-7890</string>
    <string name="OK">Ok</string>
    <string name="error">Error</string>
    <string name="error_loading_contact">Error loading contact</string>
    <string name="error_saving_contact">Error saving contact, please check the error and try again</string>
    <string name="phones">Phones</string>
    <string name="saving_please_wait">Saving, please wait...</string>
    <string-array name="phone_types">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
    </string-array>
</resources>